# paper-learning

./: readme.md
Observability_Aware_Intrinsic_and_Extrinsic_Calib/docs/: notes.tex
Observability_Aware_Intrinsic_and_Extrinsic_Calib/drawio/: calib
Robust-Stereo-Visual-Inertial-Odometry-for-Fast-Autonomous-Flight/docs/: notes.tex
Targetless_Calibration_of_LiDAR-IMU_System_Based_on_Continuous-time_Batch_Estimation/: .gitignore  CMakeLists.txt
Targetless_Calibration_of_LiDAR-IMU_System_Based_on_Continuous-time_Batch_Estimation/alg-sim/: CMakeLists.txt
Targetless_Calibration_of_LiDAR-IMU_System_Based_on_Continuous-time_Batch_Estimation/alg-sim/config/: config.yaml
Targetless_Calibration_of_LiDAR-IMU_System_Based_on_Continuous-time_Batch_Estimation/alg-sim/src/: CMakeLists.txt  main.cpp
Targetless_Calibration_of_LiDAR-IMU_System_Based_on_Continuous-time_Batch_Estimation/alg-sim/src/include/: calib.h  config.h  imu_bspline.h  odometer.h  sensor.h
Targetless_Calibration_of_LiDAR-IMU_System_Based_on_Continuous-time_Batch_Estimation/alg-sim/src/include/odometer/: lidar_odometer.h  odometer.h  visual_odometer.h
Targetless_Calibration_of_LiDAR-IMU_System_Based_on_Continuous-time_Batch_Estimation/alg-sim/src/include/sensor/: sensor.h
Targetless_Calibration_of_LiDAR-IMU_System_Based_on_Continuous-time_Batch_Estimation/alg-sim/src/include/utils/: enum_cast.hpp  kitti_lidar_reader.hpp  status.hpp
Targetless_Calibration_of_LiDAR-IMU_System_Based_on_Continuous-time_Batch_Estimation/alg-sim/src/src/: calib.cpp  config.cpp  imu_bspline.cpp  odometer.cpp  sensor.cpp
Targetless_Calibration_of_LiDAR-IMU_System_Based_on_Continuous-time_Batch_Estimation/alg-sim/src/src/odometer/: lidar_odometer.cpp  visual_odometer.cpp
Targetless_Calibration_of_LiDAR-IMU_System_Based_on_Continuous-time_Batch_Estimation/alg-sim/src/src/sensor/: sensor.cpp
Targetless_Calibration_of_LiDAR-IMU_System_Based_on_Continuous-time_Batch_Estimation/alg-sim/test/: CMakeLists.txt  test_lidar_odometer.cpp  test_main.cpp
Targetless_Calibration_of_LiDAR-IMU_System_Based_on_Continuous-time_Batch_Estimation/alg-sim/test/include/: test_config.hpp
Targetless_Calibration_of_LiDAR-IMU_System_Based_on_Continuous-time_Batch_Estimation/code_structure/: code_structure
Targetless_Calibration_of_LiDAR-IMU_System_Based_on_Continuous-time_Batch_Estimation/docs/: notes.tex
Targetless_Calibration_of_LiDAR-IMU_System_Based_on_Continuous-time_Batch_Estimation/output/: bezier.txt  controlPoints.txt  uniformBSpline.txt
Targetless_Calibration_of_LiDAR-IMU_System_Based_on_Continuous-time_Batch_Estimation/pyDrawer/: drawer.py
Targetless_Calibration_of_LiDAR-IMU_System_Based_on_Continuous-time_Batch_Estimation/src/: CMakeLists.txt  main.cpp
Targetless_Calibration_of_LiDAR-IMU_System_Based_on_Continuous-time_Batch_Estimation/src/include/: bezier.hpp  bspline.hpp
The_Normal_Distributions_Transform_A_New_Approach_to_Laser_Scan_Matching/: notes.tex
lie-group/: lie-group.tex
lishengyu/: visionModel.tex
sfm/SfM-Toy-Library-modify/output/: SfM_toy_Library_Cameras.ply  SfM_toy_Library_Points.ply  openMVG_Cameras.ply  openMVG_Points.ply
sfm/SfM-Toy-Library-modify/src/: CMakeLists.txt  main.cpp  viewer.cpp
sfm/SfM-Toy-Library-modify/src/src/: SfM.cpp  SfMStereoUtilities.cpp
sfm/openMVG-modify/: CMakeLists.txt
sfm/openMVG-modify/config/: config.yaml  config_identity.yaml  sensor_width_camera_database.txt
sfm/openMVG-modify/docs/: code _structure  notes.tex  pose_structure
sfm/openMVG-modify/pose-points/: openMVG_Cameras.ply  openMVG_Points.ply
sfm/openMVG-modify/script/: SfM_GlobalPipeline.py  SfM_SequentialPipeline.py  tutorial_demo.py
sfm/openMVG-modify/src/: CMakeLists.txt  main.cpp
sfm/openMVG-modify/src/include/: SfMInit_image_listing.hpp  SfM_ply_helper.hpp  compute_SfM_data_color.hpp  compute_features.hpp  compute_matches.hpp  config.h  geometric_filter.hpp  global_SfM.hpp  pair_generator.hpp
sfm/openMVG-modify/src/src/: config.cpp
sfm/openMVG-modify/viewer/: CMakeLists.txt  viewer.cpp
sfm/sfm-modify/: CMakeLists.txt
sfm/sfm-modify/output/: _cameras.ply  _points.ply
sfm/sfm-modify/src/: main.cpp  viewer.cpp
sfm/sfm-modify/src/include/: SfM.h
sfm/sfm-modify/src/src/: SfM.cpp
sfm/workspace/src/: CMakeLists.txt  main.cpp
sfm/workspace/src/include/: ComputeFeatures.hpp  ComputeMatches.hpp  ComputeSfM_DataColor.hpp  GeometricFilter.hpp  PairGenerator.hpp  compute_features.hpp  config.hpp  fMInit_ImageListing.hpp  fMInit_image_listing.hpp  global_SfM.hpp  pair_generator.hpp
